# MLOps

./: .gitignore  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml  helloworld.yaml
homework1/: dockerfile
homeworks/homework1/: .precommit-config.yaml
homeworks/homework1/app/: main.py  models.py
homeworks/homework1/tests/: test_main.py
lab1/: .env.prod  .env.test  main.py  test.py
lab1/config/: .env.dev
lab1/homework/: The difference between optimized and unoptimized docker images was around 1.docx  pyproject.toml
lab1/homework/app/: inference.py
lab1/lab/app/: pytest.ini  settings.py
lab1/lab/app/api/: inference.py
lab1/lab/app/tests/: test_fastapi.py
lab1/models/: iris_model.pkl
lab1/tests/: secrets.yaml  test_fastapi.py
lab11/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml  test.py
lab11/app/: core_api_functions.py
lab11/sentiment_app/: app.py  models.py  test_models.py
lab11/src/: send_to_bucket.py
lab11/src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
lab11/terraform/: .terraform.lock.hcl  providers.tf  s3.tf
lab11/tests/: test_main.py
lab2/: compose.yml
lab2/homework/: download_disruptions.sh  download_services.sh  homework.ipynb
lab2/lab/: notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb
lab3/homework/: polars.ipynb
lab3/lab/: notebook_polars.ipynb
lab4/: pyproject.toml
lab4/homework/: main.ipynb
lab4/lab/: main.ipynb
lab4/lab/vectorscale_db/: docker-compose.yml
lab4/lab/vectorscale_db/init_db/: create_similar_search_service_db.sql
lab5/: LAB_INSTRUCTION_2_MLFLOW.ipynb  mlflow.db
lab5/mlflow-artifacts/1/05fe2b43bb4e422fa9ed0f843e57ce17/artifacts/: estimator.html
lab5/mlflow-artifacts/1/635ec55791594e959340d886802155cb/artifacts/: estimator.html
lab5/mlflow-artifacts/1/9634ec8e18ff4321b8f6b84ae52f433d/artifacts/: estimator.html
lab5/mlflow-artifacts/1/add6950690c04b6897e67dd4d9b887f6/artifacts/: estimator.html
lab5/mlflow-artifacts/1/f4a9d9bc0d4d4696a4904841670b9464/artifacts/: estimator.html
lab6/: LAB_INSTRUCTION.ipynb  homework.ipynb  pyproject.toml
lab7/: benchmark.py  benchmark_onnx.py  benchmark_results.txt  dockerfile.onnx  dockerfile.pytorch  homework.ipynb  pyproject.toml  run_comparison.sh  save_models.py
lab9/: Dockerfile  download_artifacts.py  pyproject.toml
lab9/app/: main.py
labs/lab1/: .pre-commit-config.yaml  docker-compose.yaml  dockerfile  pyproject.toml
labs/lab1/app/: .sops.yaml  app.py  main.py  train.py
labs/lab1/app/api/: training.py
labs/lab1/app/config/: secrets.yaml
labs/lab1/app/tests/: test_settings.py
labs/lab2/: notebook_02_duckdb.ipynb  pyproject.toml
terraform/aliases/: providers.tf  s3.tf
terraform/github_repository/: github_repository.tf  outputs.tf  variables.tf
terraform/multi-region-buckets/: outputs.tf  s3.tf  variables.tf
terraform/refactoring/: main.tf  outputs.tf  s3.tf  variables.tf
terraform/refactoring/modules/s3_bucket/: main.tf  variables.tf
terraform/remote_state/: providers.tf  s3.tf
