[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "fastapi[standard]>=0.118.0",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "xenon>=0.9.3",
]

[tool.uv.workspace]
members = ["homework1"]
