[project]
name = "homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi[standard]>=0.118.2",
    "joblib>=1.5.2",
    "pydantic>=2.12.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]



[tool.uv.sources]
torch = [
    {index = "pytorch-cpu"},
]
torchvision = [
    {index = "pytorch-cpu"}
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
